Fixed #26872 -- Fixed filter overflow bug in admin
Updated the style of filter choices to prevent overflow. Added
title attribute with full text to each choice.

--- a/django/contrib/admin/static/admin/css/changelists.css
+++ b/django/contrib/admin/static/admin/css/changelists.css
@@ -166,6 +166,8 @@
 #changelist-filter a {
     display: block;
     color: #999;
+    text-overflow: ellipsis;
+    overflow-x: hidden;
 }
 
 #changelist-filter li.selected {
